--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,6 +1,12 @@
-<!DOCTYPE html>
-<html>
-<body>
-    <p>Test</p>
-</body>
-</html>
+<section data-ng-controller="IndexController">
+	<div class="jumbotron">
+        <h1>'Allo, 'Allo!</h1>
+        <p>You {{test}} now have</p>
+        <ul>
+            <li>Mongoose</li>
+            <li>Express</li>
+            <li>Angular</li>
+            <li>Node</li>
+        </ul>
+    </div>
+</section>
